@@ -1,0 +1,32 @@
+name    = WWW-DanDomain
+author  = Jonas B. Nielsen (jonasbn) <jonasbn@cpan.org>
+license = Artistic_1_0
+copyright_holder = Jonas B. Nielsen
+
+[@Basic]
+
+[GitHub::Meta]
+
+[VersionFromModule]
+
+[ModuleBuild]
+mb_version = 0.30
+
+[Prereqs]
+Test::More                = 0
+File::Slurp               = 0
+Test::Exception           = 0
+Test::MockObject::Extends = 0
+Env                       = 0
+Data::Dumper              = 0
+WWW::Mechanize            = 0
+WWW::Mechanize::Cached    = 0
+Carp                      = 0
+Try::Tiny                 = 0
+perl                      = 5.008
+
+[MetaResources]
+repository.web  = https://github.com/jonasbn/dand
+repository.url  = https://github.com/jonasbn/dand.git
+repository.type = git
+homepage        = http://logicLAB.jira.com/browse/DAND
