@@ -3,6 +3,11 @@ Change history for WWW::DanDomain
 Project change log:
 http://logicLAB.jira.com/browse/DAND#selectedTab=com.atlassian.jira.plugin.system.project%3Achangelog-panel
 
+HEAD
+
+- Migrated build system from Module::Build to Dist::Zilla
+
+
 0.07 2014-08-23, maintenance release, updated not required
 
 - Added specification of Perl requirement as 5.8 as pointed out
